# syn

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  appveyor.yml  build.rs  syn.json
.github/workflows/: ci.yml  pre_ci.yml
benches/: Cargo.toml  file.rs  rust.rs
codegen/: Cargo.toml  README.md  rust-toolchain
codegen/crates/fold/: Cargo.toml
codegen/crates/fold/src/: fold.rs  lib.rs
codegen/crates/visit/: Cargo.toml
codegen/crates/visit-mut/: Cargo.toml  build.rs
codegen/crates/visit-mut/src/: lib.rs  visit_mut.rs
codegen/crates/visit/src/: lib.rs  visit.rs
codegen/src/: cfg.rs  clone.rs  css.rs  debug.rs  eq.rs  error.rs  file.rs  fold.rs  full.rs  gen.rs  hash.rs  json.rs  lookup.rs  main.rs  operand.rs  parse.rs  snapshot.rs  types.rs  util.rs  version.rs  visit.rs  visit_mut.rs  workspace_path.rs
dev/: Cargo.toml  README.md  import.sh  main.rs  parse.rs
examples/: README.md  dump-ast.rs
examples/dump-syntax/: Cargo.toml  README.md  main.rs
examples/dump-syntax/src/: main.rs
examples/heapsize/: Cargo.toml  README.md
examples/heapsize/example/: Cargo.toml
examples/heapsize/heapsize/: Cargo.toml
examples/heapsize/heapsize_derive/: Cargo.toml
examples/heapsize2/: README.md
examples/heapsize2/heapsize/: Cargo.toml
examples/heapsize2/heapsize_derive/: Cargo.toml
examples/heapsize2/heapsize_derive/src/: lib.rs
examples/lazy-static/: Cargo.toml  README.md
examples/lazy-static/example/: Cargo.toml
examples/lazy-static/lazy-static/: Cargo.toml
examples/lazy-static/lazy-static/src/: lib.rs
examples/trace-var/: Cargo.toml  README.md
examples/trace-var/example/: Cargo.toml
examples/trace-var/trace-var/: Cargo.toml
examples/trace-var/trace-var/src/: lib.rs
examples/unstable/: Cargo.toml
examples/unstable/src/: lib.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: create_token_buffer.rs  parse_file.rs  parse_literal.rs
json/: Cargo.toml
json/src/: lib.rs
src/: ast.rs  attr.rs  bigint.rs  buffer.rs  classify.rs  common.rs  constant.rs  cursor.rs  custom_keyword.rs  custom_punctuation.rs  custom_token.rs  data.rs  delimited.rs  derive.rs  discouraged.rs  do_parse.rs  drops.rs  error.rs  escape.rs  export.rs  expr.rs  ext.rs  file.rs  fixup.rs  fold.rs  gen_helper.rs  generics.rs  group.rs  helper.rs  ident.rs  item.rs  keyword.rs  krate.rs  lib.rs  lifetime.rs  lit.rs  lookahead.rs  mac.rs  macro_input.rs  macros.rs  (+32 more)
src/aster/: generics.rs  ident.rs  invoke.rs  lifetime.rs  path.rs  qpath.rs  ty.rs  ty_param.rs  where_predicate.rs
src/next/: error.rs  group.rs  lookahead.rs  mod.rs  parse.rs  span.rs  token.rs
src/parse/: discouraged.rs  mod.rs
syn_codegen/: Cargo.toml  README.md
syn_codegen/src/: main.rs
syn_nom/: Cargo.toml
syn_nom/src/: helper.rs  lib.rs
synom/: Cargo.toml
synom/src/: cursor.rs  delimited.rs  helper.rs  lib.rs  space.rs  span.rs  tokens.rs
tests/: all.rs  clone.ps1  clone.sh  custom_keyword.rs  regression.rs  test.rs  test_async_fn.rs  test_asyncness.rs  test_attribute.rs  test_compile_error.rs  test_const_underscore.rs  test_derive_input.rs  test_derive_input_with_default.rs  test_expand.rs  test_expr.rs  test_gen.rs  test_generics.rs  test_grouping.rs  test_ident.rs  test_item.rs  test_iterators.rs  test_lit.rs  test_macro_input.rs  test_meta.rs  test_meta_item.rs  test_parse.rs  test_parse_buffer.rs  test_parse_quote.rs  test_parse_stream.rs  test_pat.rs  test_path.rs  test_precedence.rs  test_punctuated.rs  test_receiver.rs  test_round_trip.rs  test_serde_suite.rs  test_shebang.rs  test_should_parse.rs  test_size.rs  test_stmt.rs  (+6 more)
tests/cases/: attr.rs  comment.rs  function.rs  global.rs  impl.rs  item.rs  lit.rs  macro.rs  mod.rs  parser.rs  structs_enums.rs  traits.rs  ty.rs  use.rs
tests/common/: eq.rs  mod.rs  parse.rs  respan.rs  visit.rs
tests/crate/: Cargo.toml  test.rs
tests/crates/: Cargo.toml  main.rs
tests/debug/: gen.rs  mod.rs
tests/features/: Cargo.toml  lib.rs  mod.rs
tests/macros/: mod.rs
tests/regression/: issue1143.rs  issue1235.rs
tests/repo/: mod.rs
tests/rust/: clone.sh
tests/snapshots/: test_asyncness__async_closure.snap  test_asyncness__async_fn.snap  test_attribute__bool_lit-2.snap  test_attribute__bool_lit.snap  test_attribute__meta_item_bool_value-2.snap  test_attribute__meta_item_bool_value-3.snap  test_attribute__meta_item_bool_value-4.snap  test_attribute__meta_item_bool_value.snap  test_attribute__meta_item_list_bool_value-2.snap  test_attribute__meta_item_list_bool_value.snap  test_attribute__meta_item_list_bool_value_multiple_segments-2.snap  test_attribute__meta_item_list_bool_value_multiple_segments.snap  test_attribute__meta_item_list_lit-2.snap  test_attribute__meta_item_list_lit.snap  test_attribute__meta_item_list_name_value-2.snap  test_attribute__meta_item_list_name_value.snap  test_attribute__meta_item_list_name_value_multiple_segments-2.snap  test_attribute__meta_item_list_name_value_multiple_segments.snap  test_attribute__meta_item_list_path-2.snap  test_attribute__meta_item_list_path.snap  test_attribute__meta_item_list_path_leading_colon-2.snap  test_attribute__meta_item_list_path_leading_colon.snap  test_attribute__meta_item_list_path_multiple_segments-2.snap  test_attribute__meta_item_list_path_multiple_segments.snap  test_attribute__meta_item_list_word-2.snap  test_attribute__meta_item_list_word.snap  test_attribute__meta_item_multiple-2.snap  test_attribute__meta_item_multiple.snap  test_attribute__meta_item_multiple_with_path-2.snap  test_attribute__meta_item_multiple_with_path.snap  test_attribute__meta_item_name_value-2.snap  test_attribute__meta_item_name_value.snap  test_attribute__meta_item_name_value_leading_colon-2.snap  test_attribute__meta_item_name_value_leading_colon.snap  test_attribute__meta_item_name_value_multiple_segments-2.snap  test_attribute__meta_item_name_value_multiple_segments.snap  test_attribute__meta_item_path-2.snap  test_attribute__meta_item_path.snap  test_attribute__meta_item_path_leading_colon-2.snap  test_attribute__meta_item_path_leading_colon.snap  (+54 more)
(+9 files in other folders)
