[package]
name = "syn"
version = "0.15.44" # don't forget to update html_root_url and syn.json
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Parser for Rust source code"
repository = "https://github.com/dtolnay/syn"
documentation = "https://docs.rs/syn"
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
include = [
    "/build.rs",
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[features]
default = ["derive", "parsing", "printing", "clone-impls", "proc-macro"]
derive = []
full = []
parsing = []
printing = ["quote"]
visit = []
visit-mut = []
fold = []
clone-impls = []
extra-traits = []
proc-macro = ["proc-macro2/proc-macro", "quote/proc-macro"]

[dependencies]
proc-macro2 = { version = "0.4.4", default-features = false }
quote = { version = "0.6", optional = true, default-features = false }
unicode-xid = "0.1"

[dev-dependencies]
insta = "0.8"
rayon = "1.0"
ref-cast = "0.2"
regex = "1.0"
termcolor = "1.0"
walkdir = "2.1"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[badges]
travis-ci = { repository = "dtolnay/syn" }

[workspace]
members = ["benches", "dev", "json"]
