[package]
name = "syn-next"
version = "1.0.0-rc2" # don't forget to update html_root_url and syn.json
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Parser for Rust source code"
repository = "https://github.com/dtolnay/syn"
documentation = "https://docs.rs/syn"
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
include = [
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]
edition = "2018"

[lib]
name = "syn"

[features]
default = ["derive", "parsing", "printing", "clone-impls", "proc-macro"]
derive = []
full = []
parsing = []
printing = ["quote-next"]
visit = []
visit-mut = []
fold = []
clone-impls = []
extra-traits = []
proc-macro = ["proc-macro2-next/proc-macro", "quote-next/proc-macro"]

[dependencies]
proc-macro2-next = { version = "1.0.0-rc3", default-features = false }
quote-next = { version = "1.0.0-rc3", optional = true, default-features = false }
unicode-xid = "0.2"

[dev-dependencies]
insta = "0.9"
rayon = "1.0"
ref-cast = "0.2"
regex = "1.0"
termcolor = "1.0"
walkdir = "2.1"

[[bench]]
name = "rust"
edition = "2018"
harness = false
required-features = ["full", "parsing"]

[[bench]]
name = "file"
edition = "2018"
required-features = ["full", "parsing"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
all-features = true

[badges]
travis-ci = { repository = "dtolnay/syn" }

[workspace]
members = ["dev", "json"]
