[package]
name = "syn-internal-codegen"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>", "Nika Layzell <nika@thelayzells.com>"]
edition = "2021"

publish = false # this is an internal crate which should never be published

[dependencies]
anyhow = "1"
color-backtrace = "0.4"
indexmap = { version = "2", features = ["serde"] }
inflections = "1.1"
prettyplease = "0.2.3"
proc-macro2 = { version = "1.0.20", features = ["span-locations"] }
quote = "1"
semver = { version = "1", features = ["serde"] }
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
syn = { version = "2", features = ["derive", "full", "parsing", "printing"], default-features = false }
syn-codegen = { path = "../json" }
thiserror = "1"
toml = "0.5"

[workspace]
[patch.crates-io]
syn = { path = ".." }
