[package]
name = "syn-dev"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "parse.rs"
proc-macro = true

[[bin]]
path = "main.rs"
name = "syn-dev"

[dependencies]
quote-next = "1.0.0-rc2"

[dependencies.syn-next]
path = ".."
default-features = false
features = ["parsing", "full", "extra-traits", "proc-macro"]
