[package]
name = "syn-dev"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "parse.rs"
proc-macro = true

[[bin]]
path = "main.rs"
name = "syn-dev"

[dependencies]
quote = "1"

[dependencies.syn]
default-features = false
features = ["extra-traits", "full", "parsing", "proc-macro"]
path = ".."
