[package]
name = "syn-codegen"
version = "0.3.0" # also update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::procedural-macro-helpers"]
description = "Syntax tree describing Syn's syntax tree"
documentation = "https://docs.rs/syn-codegen"
edition = "2018"
keywords = ["syn"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/syn"

[dependencies]
indexmap = { version = "1.0", features = ["serde-1"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.88", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
