[package]
name = "synom"
version = "0.11.3"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Stripped-down Nom parser used by Syn"
repository = "https://github.com/dtolnay/syn"
documentation = "https://docs.rs/synom/"
categories = ["development-tools::procedural-macro-helpers"]
readme = "../README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
publish = false # this branch contains breaking changes

[dependencies]
quote = { git = 'https://github.com/dtolnay/quote', optional = true }
unicode-xid = "0.0.4"

[features]
printing = ["quote"]
parsing = []
default = ["parsing"]

[dev-dependencies]
proc-macro2 = { git = 'https://github.com/alexcrichton/proc-macro2' }

[dev-dependencies.syn]
version = "0.11"
path = ".."
features = ["parsing", "full", "extra-traits"]
default-features = false
