[package]
name = "dump-syntax"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
colored = "1.7"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

[dependencies.syn]
path = "../.."
default-features = false
features = ["parsing", "full", "extra-traits"]

[workspace]
