[package]
name = "dump-syntax"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
colored = "3"
proc-macro2 = { version = "1", features = ["span-locations"] }

[dependencies.syn]
default-features = false
features = ["extra-traits", "full", "parsing"]
path = "../.."
