[package]
name = "syn-parse-crates"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
publish = false

[[bin]]
name = "syn-parse-crates"
path = "main.rs"

[dependencies]
anyhow = "1"
flate2 = "1"
rayon = "1"
syn = { path = "../..", default-features = false, features = ["full", "parsing"] }
tar = "0.4"
