[package]
name = "syn-fold"
version = "0.0.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::procedural-macro-helpers"]
description = "Trait to transform a syn syntax tree by value."
documentation = "https://docs.rs/syn-fold"
edition = "2021"
keywords = ["syn"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/syn"

[dependencies]
syn = { version = "2", path = "../../..", default-features = false }
proc-macro2 = { version = "1", default-features = false }

[package.metadata.docs.rs]
features = ["syn/derive", "syn/full"]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
