[package]
name = "heapsize_derive"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { path = "../../.." }
#quote = "0.5"
quote = { git = 'https://github.com/alexcrichton/quote', branch = 'v3' }
#proc-macro2 = { version = "0.3", features = ["nightly"] }
proc-macro2 = { git = 'https://github.com/alexcrichton/proc-macro2', branch = 'v3', features = ['nightly'] }
