[package]
name = "lazy_static"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2-next = { version = "1.0.0-rc1", features = ["nightly"] }
quote-next = "1.0.0-rc2"
syn-next = { path = "../../../", features = ["full"] }
