[package]
name = "trace-var"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
syn-next = { path = "../../../", features = ["full", "fold"] }
quote-next = "0.6"
proc-macro2-next = { version = "0.4", features = ["nightly"] }
