[package]
name = "trace-var"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
syn-next = { path = "../../../", features = ["full", "fold"] }
quote-next = "1.0.0-rc1"
proc-macro2-next = { version = "1.0.0-rc1", features = ["nightly"] }
